syntax = "proto3";

option csharp_namespace = "Sisa.Common.Responses";

package sisa.common.responses;

import "google/protobuf/timestamp.proto";

message ActorInfoResponse {
  reserved 4 to 9; // other data fields

  string id = 1;
  string userName = 2;
  string displayName = 3;

  google.protobuf.Timestamp Timestamp = 10;
}
