syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Files.Responses";

package sisa.blog.api.v1.files.responses;

import "google/protobuf/wrappers.proto";

import "sisa/libs/common/responses/paging_info_response.proto";
import "sisa/libs/common/responses/actor_info_response.proto";

message FileResponse {
  // reversed field must be reflect to the database
  reserved 11 to 50; // other data fields
  reserved 52 to 60; // relationship fields
  reserved 63 to 70; // audit fields

  string id = 1;
  string name = 2; // original file name
  google.protobuf.StringValue title = 3;
  google.protobuf.StringValue description = 4;
  map<string, string> meta = 5;

  string bucket = 6;
  string path = 7;
  string key = 8;  
  string url = 9;

  // audit fields: from 63 to 70
  sisa.common.responses.ActorInfoResponse creator = 61;
  sisa.common.responses.ActorInfoResponse updater = 62;
}

message SingleFileResponse {
  FileResponse value = 1;
}

message ListFilesResponse {
  repeated FileResponse value = 1;
  sisa.common.responses.PagingInfoResponse paging = 2;
}
